--- a/presentation.tex
+++ b/presentation.tex
@@ -515,24 +515,22 @@
 			\begin{itemize}
 				\color{nb}
 				\large
-				\item<1-> \textit{;}
-				\item<2-> \textit{;}
+				\item<1-> \textit{Générée par les périphériques d'E/S;}
+				\item<2-> \textit{Exceptions;}
+				\item<3-> \textit{Interruptions;}
+				\item<4-> \textit{Vecteurs d'exceptions;}
+				\item<5-> \textit{Définition de 16 vecteurs d'exceptions;}
+				\item<6-> \textit{4 types d'exceptions avec 4 états d'exécutions;}
+				\end{itemize}
+				\item<6-> \textit{Quelques registres;}
 				\begin{itemize}
 					\color{white}
-					\item<3-> \textit{\textbf{40 physiquements implémentés};}
-					\item<4-> \textit{\textbf{Deux fonctions minimum disponible sur chaque pin};}
-					\item<5-> \textit{\textbf{Possibilité de configurer une fonction alternative} ;}
-					%\item<4-> \textit{L'outils \textbf{}} ;}
+					\item<7-> \textit{\textbf{esr\_el1} ;}
+					\item<8-> \textit{\textbf{elr\_el1} ;}
+					\item<9-> \textit{\textbf{vbar\_el1};}
+					\item<10-> \textit{\textbf{daifclr} ;}
+					\item<11->	\textit{\textbf{daifset};}
 				\end{itemize}
-				\item<6-> \textit{\textbf{41 registres};}
-				\begin{itemize}
-					\color{white}
-					\item<7-> \textit{\textbf{GPFSEL{0-5}} ;}
-					\item<8-> \textit{\textbf{GPSET{0-1}} ;}
-					\item<9-> \textit{\textbf{GPCLR{0-1}} ;}
-					\item<10-> \textit{\textbf{GPLEV{0-1}} ;}
-				\end{itemize}
-				\item<11-> \textit{\textbf{Cinq fonctions alternatives}}
 			\end{itemize}
 		\end{center}
 	\end{beamerboxesrounded}
